--- a/UI/politico.css
+++ b/UI/politico.css
@@ -53,3 +53,10 @@ img{margin-left:auto,margin-right:auto;
     float:left;
     padding:5px;	      
 }
+table, th, td {
+  border: 1px solid black;
+  border-collapse: collapse;
+}
+th, td {
+  padding : 15 px;
+}
